--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.gongmingqm10.sipsample" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <receiver android:name=".IncomingCallReceiver" android:label="Call Receiver"/>
+
 
     <uses-permission android:name="android.permission.USE_SIP" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -21,6 +20,7 @@
         android:label="@string/app_name"
         android:name=".SipApplication"
         android:theme="@style/AppTheme" >
+        <receiver android:name=".IncomingCallReceiver" android:label="Call Receiver"/>
         <activity
             android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustPan"
